Fix sidebar when not on mobile

--- a/style.css
+++ b/style.css
@@ -76,9 +76,9 @@ main a {
 
 #sidebar {
 	position: absolute;
-	left: 50px;
-	top: 0;
-	bottom: 0;
+	left: 10%;
+	top: 20vh;
+	bottom: 20vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
